--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-20 19:44+0200\n"
+"POT-Creation-Date: 2019-06-21 08:27+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -415,7 +415,7 @@ msgstr "Cancel reservation"
 
 #: meeting/templates/pilot_reservation_list.html:115
 msgid "str_Canceled"
-msgstr "Cancel"
+msgstr "Canceled"
 
 #: meeting/templates/pilot_reservation_list.html:117
 msgid "str_Confirmed"
@@ -525,254 +525,248 @@ msgstr "Invalidate"
 msgid "str_Search_ULM"
 msgstr ""
 
-#: meeting/views/pilot.py:38
-msgid "Your password was successfully updated!"
-msgstr ""
+#: meeting/views/pilot.py:37
+msgid "str_message_password_updated"
+msgstr "Your password was successfully updated!"
 
-#: meeting/views/pilot.py:41
-msgid "Please correct the error below."
-msgstr ""
+#: meeting/views/pilot.py:40
+msgid "str_message_correct_error"
+msgstr "Please correct the error below."
 
+#. Translators: This contain the ulm name acces by %(ulm)s
 #: meeting/views/pilot.py:124
-#, python-format
-msgid "The microlight %(ulm)s as been successfully deleted."
-msgstr ""
+msgid "str_message_ulm_deleted"
+msgstr "The microlight %(ulm)s as been successfully deleted."
 
-#: meeting/views/pilot.py:125
-#, python-format
-msgid ""
+#. Translators: This contain the ulm name acces by %(ulm)s
+#: meeting/views/pilot.py:126
+msgid "str_message_delete_ulm_link_to_reservation"
+msgstr ""
 "The microlight %(ulm)s you are trying to delete is link to an active "
 "reservation and cannot be deleted."
-msgstr ""
 
 #: meeting/widgets.py:13
-msgid "Unknown"
-msgstr ""
+msgid "str_Unknown"
+msgstr "Unknown"
 
 #: meeting/widgets.py:14
-msgid "Yes"
-msgstr ""
+msgid "str_Yes"
+msgstr "Yes"
 
 #: meeting/widgets.py:15
-msgid "No"
-msgstr ""
+msgid "str_No"
+msgstr "No"
 
 #: pages/models.py:26
-msgid "Page name"
-msgstr ""
+msgid "str_Page_name"
+msgstr "Page name"
 
 #: pages/models.py:29
-msgid "page"
-msgstr ""
+msgid "str_page"
+msgstr "page"
 
 #: pages/models.py:30
-msgid "pages"
-msgstr ""
+msgid "str_pages"
+msgstr "pages"
 
 #: pages/models.py:48
-msgid "Key"
-msgstr ""
+msgid "str_Key"
+msgstr "Key"
 
 #: pages/models.py:49
-msgid "A unique id for this chunk"
-msgstr ""
+msgid "str_Chunk_Key_help_text"
+msgstr "A unique id for this chunk"
 
 #: pages/models.py:54
-msgid "Content"
-msgstr ""
+msgid "str_Content"
+msgstr "Content"
 
 #: pages/models.py:58
-msgid "Description"
-msgstr ""
+msgid "str_Description"
+msgstr "Description"
 
 #: pages/models.py:61
-msgid "Short Description"
-msgstr ""
+msgid "str_Short_description"
+msgstr "Short Description"
 
 #: pages/models.py:68
-msgid "chunk"
-msgstr ""
+msgid "str_chunk"
+msgstr "chunk"
 
 #: pages/models.py:69
-msgid "chunks"
-msgstr ""
+msgid "str_chunks"
+msgstr "chunks"
 
 #: pages/templates/about.html:6 templates/includes/footer.html:17
 #: templates/includes/logged_sidebar.html:104 templates/includes/navbar.html:18
-msgid "About"
-msgstr ""
+msgid "str_About"
+msgstr "About"
 
 #: pages/templates/contact.html:6 templates/includes/logged_sidebar.html:110
 #: templates/includes/navbar.html:21
-msgid "Contact"
-msgstr ""
+msgid "str_Contact"
+msgstr "Content"
 
 #: pages/templates/copyright.html:6 templates/includes/footer.html:33
-msgid "Copyright Notices"
+msgid "str_Copyright_notices"
 msgstr ""
 
 #: pages/templates/on_site.html:6 templates/includes/footer.html:25
 #: templates/includes/logged_sidebar.html:92 templates/includes/navbar.html:12
-msgid "On Site"
-msgstr ""
+msgid "str_On_site"
+msgstr "On site"
 
-#: pages/templates/pilot_informations.html:6
-msgid "Pilots Information"
-msgstr ""
+#: pages/templates/pilot_informations.html:6 templates/includes/footer.html:26
+#: templates/includes/logged_sidebar.html:98 templates/includes/navbar.html:15
+msgid "str_Pilots_information"
+msgstr "Pilots information"
 
 #: pages/templates/pilot_informations.html:10
-msgid "General Organisation"
-msgstr ""
+msgid "str_General_organisation"
+msgstr "General organisation"
 
 #: pages/templates/pilot_informations.html:14
-msgid "Microlight in flight arrival"
+msgid "str_Microlight_in_flight_arrival"
 msgstr ""
 
 #: pages/templates/pilot_informations.html:18
-msgid "Microlight departure"
+msgid "str_Microlight_departure"
 msgstr ""
 
 #: pages/templates/pilot_informations.html:22
-msgid "Flex wings procedure"
-msgstr ""
+msgid "str_Flex_wings_procedure"
+msgstr "Flex wings procedure"
 
 #: pages/templates/pilot_informations.html:26
-msgid "Plane procedures"
+msgid "str_Plane_procedure"
 msgstr ""
 
 #: pages/templates/privacy.html:6 templates/includes/footer.html:32
-msgid "Privacy Policies"
+msgid "str_Privacy_policies"
 msgstr ""
 
 #: pages/templates/terms.html:6 templates/includes/footer.html:34
-msgid "Terms and Conditions of Use"
-msgstr ""
+msgid "str_Legal_terms"
+msgstr "Terms and Conditions of Use"
 
-#: radio_call_sign_field/formfields.py:15
-msgid "Enter a valid radio call sign."
-msgstr ""
+#: radio_call_sign_field/formfields.py:16
+msgid "str_invalide_aircraft_registration_number"
+msgstr "Enter a valid radio call sign."
 
 #: radio_call_sign_field/modelfields.py:10
-msgid "Aicraft radio call sign"
-msgstr ""
+msgid "str_Aircraft_registration_number"
+msgstr "Aicraft radio call sign"
 
-#: radio_call_sign_field/validators.py:17
-#, python-brace-format
-msgid "{val} does not match one of the folowing format : {patterns}"
-msgstr ""
+#. Translators: contain variable: value as {val}, patterns as {patterns}
+#: radio_call_sign_field/validators.py:18
+msgid "str_Error_registration_number_does_not_match_pattern"
+msgstr "{val} does not match one of the folowing format : {patterns}"
 
 #: salon-ulm-blois/settings/base.py:122
-msgid "English"
-msgstr ""
+msgid "str_English"
+msgstr "English"
 
 #: salon-ulm-blois/settings/base.py:123
-msgid "French"
-msgstr ""
+msgid "str_French"
+msgstr "French"
 
 #: templates/base/base_generic.html:3 templates/base/base_logged.html:12
+#: templates/emails/includes/specialised/email_header_bar.html:6
 #: templates/registration/login.html:13
 #: templates/registration/password_reset_form.html:13
 #: templates/registration/register.html:13
-msgid "Salon ULM de Blois"
+msgid "str_Salon_Ulm_de_Blois"
 msgstr ""
 
 #: templates/base/base_logged.html:87
-msgid "Ready to Leave?"
-msgstr ""
+msgid "str_Ready_to_leave"
+msgstr "Ready to leave"
 
 #: templates/base/base_logged.html:92
-msgid "Select \"Logout\" below if you are ready to end your current session."
-msgstr ""
+msgid "str_confirm_logout"
+msgstr "Select \"Logout\" below if you are ready to end your current session."
 
-#: templates/base/base_logged.html:94 templates/base/logged_delete_form.html:12
-msgid "Cancel"
-msgstr ""
+#: templates/base/base_logged.html:94 templates/base/logged_delete_form.html:13
+msgid "str_Cancel"
+msgstr "Cancel"
 
 #: templates/base/base_logged.html:95 templates/includes/logged_navbar.html:26
 #: templates/includes/navbar.html:40
-msgid "Logout"
-msgstr ""
+msgid "str_Logout"
+msgstr "Logout"
 
-#: templates/base/logged_delete_form.html:9
-#, python-format
-msgid "Are you sure you want to delete \"%(object)s\"?"
-msgstr ""
-
+#. Translators: contain variable %(object)s
 #: templates/base/logged_delete_form.html:10
-msgid "This action can not be canceled."
-msgstr ""
+msgid "str_confirm_deletion"
+msgstr "Are you sure you want to delete \"%(object)s\"?"
 
-#: templates/emails/includes/base/header_row.html:56
-msgid "This message is not display correctly?"
-msgstr ""
+#: templates/base/logged_delete_form.html:11
+msgid "str_Action_can_not_be_canceled"
+msgstr "This action can not be canceled."
 
-#: templates/emails/includes/base/header_row.html:56
-msgid "View it in your browser."
-msgstr ""
+#: templates/emails/includes/base/header_row.html:57
+msgid "str_email_message_display_issue"
+msgstr "This message is not display correctly?"
 
-#: templates/emails/includes/specialised/email_header_bar.html:6
-msgid "Salon ULM Blois"
-msgstr ""
+#: templates/emails/includes/base/header_row.html:57
+msgid "str_email_view_in_browser"
+msgstr "View it in your browser."
 
 #: templates/emails/reservation_confirmation_request.html:13
-msgid "Confirmation"
-msgstr ""
+msgid "str_Confirmation"
+msgstr "Confirmation"
 
 #: templates/errors/400.html:7 templates/errors/logged_400.html:9
-msgid "Bad request..."
-msgstr ""
+msgid "str_Bad_request"
+msgstr "Bad request..."
 
 #: templates/errors/400.html:8 templates/errors/logged_400.html:10
-msgid "Your request resulted in an error"
-msgstr ""
+msgid "str_error_request_throw_error"
+msgstr "Your request resulted in an error"
 
 #: templates/errors/400.html:9 templates/errors/403.html:9
-#: templates/errors/404.html:9 templates/errors/logged_400.html:11
-#: templates/errors/logged_403.html:11 templates/errors/logged_404.html:11
-#: templates/errors/logged_500.html:11
-msgid "Back to home"
-msgstr ""
+#: templates/errors/404.html:9 templates/errors/500.html:11
+#: templates/errors/logged_400.html:11 templates/errors/logged_403.html:11
+#: templates/errors/logged_404.html:11 templates/errors/logged_500.html:11
+msgid "str_Back_home"
+msgstr "Back to home"
 
 #: templates/errors/403.html:7 templates/errors/logged_403.html:9
-msgid "Access denied..."
-msgstr ""
+msgid "str_Access_denied"
+msgstr "Acces denied..."
 
 #: templates/errors/403.html:8 templates/errors/logged_403.html:10
-msgid "You don"
-msgstr ""
+msgid "str_Insufisant_permission"
+msgstr "You don't have permission to acces this pages."
 
 #: templates/errors/404.html:7 templates/errors/logged_404.html:9
-msgid "Page Not Found"
-msgstr ""
+msgid "str_Page_not_Found"
+msgstr "Page not found..."
 
 #: templates/errors/404.html:8 templates/errors/500.html:10
 #: templates/errors/logged_404.html:10 templates/errors/logged_500.html:10
-msgid "It looks like you found a glitch in the matrix..."
-msgstr ""
+msgid "str_glitch_in_matrix"
+msgstr "It looks like you found a glitch in the matrix..."
 
 #: templates/errors/500.html:9 templates/errors/logged_500.html:9
-msgid "Internal Error"
-msgstr ""
-
-#: templates/errors/500.html:11
-msgid "Back to Home"
-msgstr ""
+msgid "str_Internal_error"
+msgstr "Internal error..."
 
 #: templates/includes/footer.html:8
-msgid "Get Started"
-msgstr ""
+msgid "str_Get_started"
+msgstr "Get started"
 
 #: templates/includes/footer.html:10 templates/includes/logged_sidebar.html:21
-msgid "Home"
-msgstr ""
+msgid "str_Home"
+msgstr "Home"
 
 #: templates/includes/footer.html:11 templates/includes/navbar.html:50
-msgid "Sign Up"
-msgstr ""
+msgid "str_Sign_up"
+msgstr "Sign up"
 
 #: templates/includes/footer.html:15
-msgid "About Us"
-msgstr ""
+msgid "str_About_us"
+msgstr "About us"
 
 #: templates/includes/footer.html:18
 msgid "Contact Us"
@@ -780,10 +774,6 @@ msgstr ""
 
 #: templates/includes/footer.html:22
 msgid "Support"
-msgstr ""
-
-#: templates/includes/footer.html:26
-msgid "Pilot Informations"
 msgstr ""
 
 #: templates/includes/footer.html:30
@@ -824,14 +814,6 @@ msgstr ""
 
 #: templates/includes/logged_sidebar.html:86
 msgid "Other"
-msgstr ""
-
-#: templates/includes/logged_sidebar.html:98
-msgid "Pilotes Informations"
-msgstr ""
-
-#: templates/includes/navbar.html:15
-msgid "Pilotes Information"
 msgstr ""
 
 #: templates/includes/navbar.html:47 templates/registration/login.html:89
