--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -1,18 +1,20 @@
 msgid ""
 msgstr ""
+"Project-Id-Version: UlmBlois_website\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2019-06-27 20:03+0200\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: POEditor.com\n"
-"Project-Id-Version: UlmBlois_website\n"
-"Language: en\n"
 
 #: core/form.py:41 meeting/templates/index.html:72
 msgid "str_Register"
 msgstr "Register"
 
-#: core/form.py:55 core/form.py:65 meeting/form.py:60 meeting/form.py:113
-#: meeting/form.py:146 meeting/form.py:176 meeting/form.py:217
+#: core/form.py:55 core/form.py:65 meeting/form.py:61 meeting/form.py:114
+#: meeting/form.py:147 meeting/form.py:177 meeting/form.py:218
 #: templates/base/base_form.html:31
 msgid "str_Submit"
 msgstr "Submit"
@@ -20,7 +22,10 @@ msgstr "Submit"
 #. Translators: optional
 #: core/management/commands/send_reservation_confirmation_request.py:38
 msgid "str_Helptext_send_resevation_conifirmation_request"
-msgstr "Send an email asking users to confirm their reservation (active meeting only). The email will be sent only if on the specified date in the meeting settings."
+msgstr ""
+"Send an email asking users to confirm their reservation (active meeting "
+"only). The email will be sent only if on the specified date in the meeting "
+"settings."
 
 #: core/management/commands/send_reservation_confirmation_request.py:43
 msgid "str_Confirmation_Reminder_Email_Subject"
@@ -122,11 +127,11 @@ msgstr "Model"
 msgid "str_Insurance_company"
 msgstr "Insurance_company"
 
-#: meeting/form.py:69
+#: meeting/form.py:70
 msgid "str_Error_Arrival_Depart_Timeslot_Equals"
 msgstr "Arrival and departure time slot should be different."
 
-#: meeting/form.py:74
+#: meeting/form.py:75
 msgid "str_Error_Depart_Timeslot_Anterior_To_Arrival"
 msgstr "Arrival time slot should be prior to departing time slot."
 
@@ -176,7 +181,9 @@ msgstr "Airfield ICAO code"
 
 #: meeting/models.py:284
 msgid "str_Error_Reservation_Allready_Exist"
-msgstr "You already have a reservation for this meeting. Please edit the existing reservatoin"
+msgstr ""
+"You already have a reservation for this meeting. Please edit the existing "
+"reservatoin"
 
 #: meeting/models.py:334
 #: meeting/templates/includes/elements/reservation_detail.html:13
@@ -203,7 +210,6 @@ msgstr "Licence number"
 msgid "str_Insurance_number"
 msgstr "Insurance policy number"
 
-#. Téléphone chez eux (maison) ou où ils peuvent être joints pendant le salon ?
 #: meeting/templates/includes/elements/pilot_info.html:27
 #: meeting/templates/staff_reservation_validation.html:67
 msgid "str_Phone_number"
@@ -253,7 +259,6 @@ msgstr "Aesthetic cup"
 msgid "str_For_sale"
 msgstr "For sale"
 
-#. Terrain de départ (ex; Angleterre) ou dernier terrain avant Blois (ex. Dinard pour dédouaner) ?
 #: meeting/templates/includes/elements/reservation_detail.html:37
 msgid "str_Origin_city"
 msgstr "Departing city (where based)"
@@ -271,7 +276,6 @@ msgstr "Fuel reservation"
 msgid "str_Fuel_reservation_confirmed"
 msgstr "Fuel reservation confirmed"
 
-#. Pas compris...
 #: meeting/templates/includes/elements/reservation_detail.html:49
 msgid "str_Fuel_advance"
 msgstr "A check must be provided in advance to guarantee supply of fuel"
@@ -302,6 +306,7 @@ msgstr "Reservation details"
 
 #. Translators: contain the meeting start date as %(start)s and end date as %(end)s
 #: meeting/templates/index.html:9
+#, python-format
 msgid "From the %(start)s, to the %(end)s."
 msgstr "From the %(start)s, to the %(end)s."
 
@@ -525,14 +530,16 @@ msgid "str_message_correct_error"
 msgstr "Please correct the error below."
 
 #. Translators: This contain the ulm name acces by %(ulm)s
-#: meeting/views/pilot.py:124
+#: meeting/views/pilot.py:122
 msgid "str_message_ulm_deleted"
 msgstr "The microlight %(ulm)s as been successfully deleted."
 
 #. Translators: This contain the ulm name acces by %(ulm)s
-#: meeting/views/pilot.py:126
+#: meeting/views/pilot.py:124
 msgid "str_message_delete_ulm_link_to_reservation"
-msgstr "The microlight %(ulm)s you are trying to delete is linked to an active reservation and cannot be deleted."
+msgstr ""
+"The microlight %(ulm)s you are trying to delete is linked to an active "
+"reservation and cannot be deleted."
 
 #: meeting/widgets.py:13
 msgid "str_Unknown"
@@ -614,7 +621,6 @@ msgstr "Pilots information"
 msgid "str_General_organisation"
 msgstr "General organisation"
 
-#. Arrivé en vol des ULM ?
 #: pages/templates/pilot_informations.html:14
 msgid "str_Microlight_in_flight_arrival"
 msgstr "Microlight inflight arrival"
@@ -624,8 +630,8 @@ msgid "str_Microlight_departure"
 msgstr "Microlight departure"
 
 #: pages/templates/pilot_informations.html:22
-msgid "str_Flex_wings_procedure"
-msgstr "Flex wings procedure"
+msgid "str_Powered_paraglider_procedure"
+msgstr ""
 
 #: pages/templates/pilot_informations.html:26
 msgid "str_Plane_procedure"
@@ -835,7 +841,9 @@ msgstr "Your username and password didn't match. Please try again."
 
 #: templates/registration/login.html:57
 msgid "str_Error_page_permission_require"
-msgstr "Your account doesn't have access to this page. To proceed, please login with an account that has access."
+msgstr ""
+"Your account doesn't have access to this page. To proceed, please login with "
+"an account that has access."
 
 #: templates/registration/login.html:59
 msgid "str_Error_login_required"
@@ -887,14 +895,17 @@ msgstr "Password reset failed"
 
 #: templates/registration/password_reset_confirm.html:32
 msgid "str_password_reset_link_invalid"
-msgstr "The password reset link was invalid, possibly because it has already been used. Please request a new password reset."
+msgstr ""
+"The password reset link was invalid, possibly because it has already been "
+"used. Please request a new password reset."
 
 #: templates/registration/password_reset_done.html:5
 msgid "str_password_reset_email_sent"
-msgstr "We've emailed you instructions to reset your password. If they haven't arrived in a few minutes, check your spam folder."
+msgstr ""
+"We've emailed you instructions to reset your password. If they haven't "
+"arrived in a few minutes, check your spam folder."
 
 #: templates/registration/password_reset_form.html:46
 #: templates/registration/register.html:46
 msgid "str_already_have_an_account"
 msgstr "Already have an account? Login!"
-
